--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@stencil/core": "^1.14.0",
+    "@stencil/eslint-plugin": "^0.3.1",
     "@storybook/addon-a11y": "^5.3.14",
     "@storybook/addon-docs": "^5.3.13",
     "@storybook/addon-knobs": "^5.3.14",
@@ -49,7 +50,10 @@
     "babel-loader": "^8.0.6",
     "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-mocha": "^7.0.1",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
     "husky": "^4.2.5",
     "jest": "24.9.0",
     "jest-cli": "24.9.0",
